# KCardSwap

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  Caddyfile  DOCKER_TROUBLESHOOTING.md  FASTAPI_DI_PATTERN_EXPLANATION.md  GOOGLE_OAUTH_CODE_FLOW.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_CAN_MESSAGE.md  INIT-DATA-DESIGN.md  IOC-IMPLEMENTATION.md  IOC_IMPLEMENTATION_SUMMARY.md  MIGRATION-005-FIX.md  Makefile  OPTION_B_IMPLEMENTATION.md  PHASE-1-AUTH-PROFILE-COMPLETE.md  PHASE-1M.1-COMPLETE.md  PHASE-1M.2-COMPLETE.md  PHASE-2.5-ADMIN-SCRIPTS-CLARIFICATION.md  PHASE-2.5-COMPLETE.md  PHASE-3-AND-3.1-SUMMARY.md  PHASE-3-EXECUTION-REPORT.md  PHASE-3.1-COMPLETE.md  PHASE-3.1-TESTING-GUIDE.md  PHASE-4-US2-COMPLETION-REPORT.md  PHASE6_COMPLETION_SUMMARY.md  PHASE6_MOBILE_COMPLETION_REPORT.md  PHASE85_COMPLETION_REPORT.md  PHASE86_COMPLETE_SUMMARY.md  PHASE86_FINAL_STATUS.md  PHASE86_IMPLEMENTATION_SUMMARY.md  PHASE86_MOBILE_UPDATE_GUIDE.md  PHASE86_OPENAPI_COMPLETE.md  PHASE86_TEST_UPDATE_GUIDE.md  POETRY_MIGRATION_REPORT.md  README.md  SECRETS.md  (+23 more)
apps/backend/: .dockerignore  .env.example  COVERAGE_REPORT.md  Dockerfile  E2E_TEST_COVERAGE_SUMMARY.md  MISSING_E2E_TESTS_ANALYSIS.md  NEXT_PHASE_TESTING_ROADMAP.md  PRIORITY_4_EXECUTION_SUMMARY.md  PRIORITY_4_FINAL_SUMMARY.md  PRIORITY_5_COMPLETION_SUMMARY.md  README.md  SECURITY_ANALYSIS_REPORT.md  TEST_COVERAGE_PHASE5_SUMMARY.md  TEST_COVERAGE_REPORT.md  TEST_DATABASE_ENABLEMENT_ANALYSIS.md  TEST_STATUS_REPORT.md  UNCOVERED_APIS.md  alembic.ini  coverage.json  fix_all_post_tests.py  fix_post_multiline.py  fix_post_tests.py  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh  test_httponly_manual.py
apps/backend/alembic/: env.py
apps/backend/app/: __init__.py  config.py  container.py  (+2 more)
(+925 files in other folders)
